<resources>
    <string name="app_name">Movie Box</string>
    <string name="action_settings">Settings</string>
    <string name="movie_api_key">0d88ab982b9e6e6c53658520e3948f25</string>
    <string name="youtube_api_key">AIzaSyBAK9fG4MAmx8NZFnEUmFTNRIpry3H_gck</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="adult">ADULT</string>
    <string name="genre">GENRE</string>
    <string name="date_release">DATE RELEASE</string>
    <string name="status">STATUS</string>
    <string name="budget">Budget</string>
    <string name="runtime">Runtime</string>
    <string name="original_language">Original Language</string>
    <string name="homepage">Homepage</string>
    <string name="overview">Overview</string>
    <string name="cast">CAST</string>
    <string name="search">Search</string>
    <string name="no_internetconnection_try_again_later_n_click_on_to_reconnect">No InternetConnection try again later   click on to reconnect</string>
</resources>
